# elite-trading-system

./: # ARCHITECTURE.md.txt  .cursorrules  .env.example  .env.pc1  .env.pc2  .env.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_COMMAND_CENTER.md  AI-CONTEXT-GUIDE.md  ALPACA_INGESTION_AUDIT.md  ALPACA_INGESTION_AUDIT_VERIFICATION.md  ARCHITECTURAL-REVIEW-2026-03-11.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_AUDIT.md  AUDIT_FINDINGS_VERIFICATION.md  AUDIT_SUMMARY.md  BACKEND_HANDOFF.md  BUG_FREE_VERIFICATION.md  CLAUDE-CODE-HANDOFF-GPU-CHANNELS.md  CLAUDE.md  CLAWBOT_PANEL_DESIGN.md  COMPLETE-12-PROMPTS-FOR-OLEH.md  COMPLETE-CODE-REVIEW-AND-REBUILD-PLAN.md  COMPLETE_ANALYSIS_V2.md  CREATE_DESKTOP_SHORTCUT.ps1  CREATE_DESKTOP_SHORTCUT_FIXED.ps1  CURSOR-PROMPT.txt  DEEP_ANALYSIS_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEVELOPER_HANDOFF.md  EmbodierTrader.desktop  FINAL_UI_DEMO.html  FINDINGS_SUMMARY.txt  FIXES_APPLIED.md  FIXES_APPLIED_DEC8.md  FIX_ALL_ERRORS.ps1  FIX_MISSING_ENDPOINTS.ps1  (+105 more)
backend/: .dockerignore  .env.backup-20260307-070858  .env.backup-20260307-071042  .env.bad-20260307-070531  .env.example  .env.pc2.template  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  Dockerfile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  __init__.py  activate_venv.bat  api_server.py  awareness_main.py  decision_engine.py  docker-compose.yml  embodier-backend.spec  finviz_stocks.db  gpu_worker.py  main.py  paper_portfolio.py  parallel_orchestrator.py  performance_monitor.py  pyproject.toml  pytest.ini  redis_mesh.py  requirements-pc2.txt  requirements.txt  (+17 more)
(+1574 files in other folders)
