[project]
name = "embodier-backend"
version = "5.0.0"
description = "Embodier Trader backend API"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "__pycache__", "htmlcov"]
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/", "\\.venv/"]
